--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
      
       <groupId>thadome23.chatty</groupId>
       <artifactId>chatty</artifactId>
-      <version>1.0-ALPHA</version>
+      <version>1.1-Alpha</version>
      
       <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
